--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/icon_background"
+    android:background="@drawable/pop_up_background"
     tools:context=".PopUp">
 
     <ImageView
-        android:id="@+id/backbuttonIcon"
-        android:layout_width="13dp"
-        android:layout_height="13dp"
-        android:layout_marginStart="209dp"
+        android:id="@+id/closeButton"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="202dp"
         android:layout_marginTop="15dp"
-        android:src="@drawable/back_button_icon"
+        android:src="@drawable/close_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,29 +23,30 @@
         android:layout_height="100dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="30dp"
-        android:src="@mipmap/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/monstercandynameTextView"
         android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginTop="150dp"
-        android:text="Monster/Candy Name"
+        android:autoSizeMaxTextSize="25dp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
+        android:paddingHorizontal="10dp"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/levelIcon"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="185dp"
         android:src="@drawable/level_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,10 +55,19 @@
         android:id="@+id/monstercandysizeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="190dp"
-        android:text="Level"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="184dp"
         android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/rangeIcon"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="210dp"
+        android:src="@drawable/range_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,53 +75,42 @@
         android:id="@+id/monstercandyrangeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="110dp"
+        android:layout_marginStart="121dp"
         android:layout_marginTop="210dp"
-        android:text="Range"
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/rangeIcon"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="210dp"
-        android:src="@drawable/range_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:clickable="true"
         android:id="@+id/fighteatButton"
-        android:layout_width="164dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="38dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="250dp"
         android:background="@drawable/fighteat_button_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/fighteatIcon"
+            android:id="@+id/fightIcon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/candy_icon"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/monster_icon"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/fighteat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="85dp"
+        <ImageView
+            android:id="@+id/eatIcon"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="5dp"
-            android:text="fighteat"
-            android:textColor="#000000"
-            android:textSize="20sp"
+            android:src="@drawable/candy_icon"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
