--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,4 +6,103 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
+    <ProgressBar
+        android:id="@+id/lifepointsProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="155dp"
+        android:layout_height="5dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="308dp"
+        android:max="100"
+        android:progress="100"
+        android:progressTint="#009900"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/xpTextView" />
+
+    <ImageView
+        android:id="@+id/lifepointsIcon"
+        android:layout_width="18dp"
+        android:layout_height="16.5dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="305dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/xpIcon"
+        app:srcCompat="@drawable/life_points_icon" />
+
+    <ImageView
+        android:id="@+id/xpIcon"
+        android:layout_width="19.5dp"
+        android:layout_height="11.5dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginBottom="361dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
+        app:srcCompat="@drawable/xp_icon" />
+
+    <TextView
+        android:id="@+id/xpTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="358dp"
+        android:text="..."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />
+
+    <ImageView
+        android:id="@+id/userImageView"
+        android:layout_width="187dp"
+        android:layout_height="172dp"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/usernameTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+    <EditText
+        android:id="@+id/usernameTextView"
+        android:layout_width="166dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginBottom="406dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="UserName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/modifyUserNameIcon"
+        android:layout_width="33dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="414dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/modify_icon" />
+
+    <ImageView
+        android:id="@+id/modifyImageIcon"
+        android:layout_width="33dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="484dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/userImageView"
+        app:srcCompat="@drawable/modify_icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
