--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -12,7 +12,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/fighteat_button_background"
+        android:background="@drawable/rounded_angle_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -39,17 +39,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/userImage"
+            android:id="@+id/userImageImageView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="90dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/usernameTextView"
+            android:id="@+id/userNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="165dp"
@@ -71,7 +70,7 @@
             app:srcCompat="@drawable/xp_icon" />
 
         <TextView
-            android:id="@+id/xpTextView"
+            android:id="@+id/userXpTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="201dp"
@@ -91,7 +90,7 @@
             app:srcCompat="@drawable/life_points_icon" />
 
         <ProgressBar
-            android:id="@+id/lifepointsProgressBar"
+            android:id="@+id/userLifepointsProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="155dp"
             android:layout_height="5dp"
