--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -22,19 +22,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
-            android:text="TextView"
             android:textColor="#000000"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/divider"
-            android:layout_width="0.5dp"
+            android:layout_width="1dp"
             android:layout_height="80dp"
             android:layout_marginStart="75dp"
             android:layout_marginTop="0dp"
-            android:background="@android:color/darker_gray"
+            android:background="#707070"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,9 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="165dp"
             android:layout_marginTop="10dp"
-            android:text="User Name"
             android:textColor="#000000"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,7 +75,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="201dp"
             android:layout_marginTop="34dp"
-            android:text="..."
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
