--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,13 +58,14 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/userNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="92dp"
+            android:layout_marginStart="90dp"
             android:layout_marginTop="10dp"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -76,7 +77,7 @@
             android:id="@+id/xpIcon"
             android:layout_width="19.5dp"
             android:layout_height="11.5dp"
-            android:layout_marginStart="92dp"
+            android:layout_marginStart="91dp"
             android:layout_marginTop="38dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -86,8 +87,8 @@
             android:id="@+id/userXpTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="127dp"
-            android:layout_marginTop="34dp"
+            android:layout_marginStart="122dp"
+            android:layout_marginTop="35dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,8 +96,8 @@
             android:id="@+id/lifepointsIcon"
             android:layout_width="18dp"
             android:layout_height="16.5dp"
-            android:layout_marginStart="92dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="91dp"
+            android:layout_marginTop="53dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/life_points_icon" />
@@ -104,10 +105,10 @@
         <ProgressBar
             android:id="@+id/userLifepointsProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="155dp"
+            android:layout_width="160dp"
             android:layout_height="5dp"
-            android:layout_marginStart="127dp"
-            android:layout_marginTop="58dp"
+            android:layout_marginStart="122dp"
+            android:layout_marginTop="59dp"
             android:max="100"
             android:progress="100"
             android:progressTint="#009900"
