--- a/app/src/main/res/layout-sw600dp/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register.xml
@@ -4,48 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".Register">
 
-    <ImageView
-        android:id="@+id/userImageImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="80dp"
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="788dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/userNameEditText"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="420dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </com.mapbox.mapboxsdk.maps.MapView>
 
     <RelativeLayout
-        android:id="@+id/loginButton"
+        android:id="@+id/registerButton"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="505dp"
+        android:layout_marginStart="437dp"
+        android:layout_marginTop="359dp"
         android:background="@drawable/rounded_angle_background"
         android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/loginTextView"
+            android:id="@+id/registerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="12dp"
-            android:text="LOGIN"
+            android:text="PLAY NOW"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="20sp"
