--- a/app/src/main/res/layout-sw600dp/activity_profile.xml
+++ b/app/src/main/res/layout-sw600dp/activity_profile.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/default_image" />
 
     <EditText
         android:id="@+id/userNameEditText"
